Change Language API: parse File Lists instead of Sets to persist file order