@@ -9,7 +9,6 @@ import java.nio.file.Files;
 import java.nio.file.Path;
 import java.util.HashSet;
 import java.util.List;
-import java.util.Set;
 
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -43,7 +42,7 @@ class NaturalLanguageTest {
     @Test
     void testParsingJavaDoc() throws ParsingException {
         // Parse test input
-        List<Token> result = language.parse(Set.of(new File(BASE_PATH.toFile(), TEST_SUBJECT)), false);
+        List<Token> result = language.parse(List.of(new File(BASE_PATH.toFile(), TEST_SUBJECT)), false);
         logger.info(TokenPrinterUtils.printTokensByFile(result));
 
         List<TokenType> tokenTypes = result.stream().map(Token::getType).toList();
@@ -56,7 +55,7 @@ class NaturalLanguageTest {
     void testLineBreakInputs(String input) throws IOException, ParsingException {
         File testFile = File.createTempFile("input", "txt");
         Files.writeString(testFile.toPath(), input);
-        List<Token> result = language.parse(Set.of(testFile), false);
+        List<Token> result = language.parse(List.of(testFile), false);
         assertEquals(1, result.size());
     }
 
@@ -65,8 +64,8 @@ class NaturalLanguageTest {
     void testTokenAfterLineBreak(String input) throws IOException, ParsingException {
         File testFile = File.createTempFile("input", "txt");
         Files.writeString(testFile.toPath(), input);
-        List<Token> result = language.parse(Set.of(testFile), false);
-        assertEquals(2, result.get(0).getStartLine());
+        List<Token> result = language.parse(List.of(testFile), false);
+        assertEquals(2, result.getFirst().getStartLine());
     }
 
 }
